--- a/Code/NTTV/templates/main.html
+++ b/Code/NTTV/templates/main.html
@@ -56,10 +56,9 @@
           </div>
           <p class="resources-intro">🔗 Корисні посилання та інформаційні ресурси:</p>
           <ul class="resources-list">
-            <li><a href="https://docs.google.com/...">📄 Документація / Правила / Угода</a></li>
+            <li><a href="https://docs.google.com/document/d/1D3_-t8Nhd7-MKiRnXctxgexI1nBVyEr6cAERzAXqoIg/edit?usp=sharing">📄 Документація / Правила / Угода</a></li>
+            <li><a href="https://github.com/Binzigames/nttv.space">📚 GitHub репозиторій </a></li>
             <li><a href="https://discord.gg/wnWV7FJ6Qf">💬 Діскорд: технічна підтримка</a></li>
-            <li><a href="#">🎓 Навчальні матеріали</a></li>
-            <li><a href="#">🏆 Конкурси та події</a></li>
           </ul>
         </div>
       </section>
@@ -73,13 +72,13 @@
             <h2>🚀 Оновлення</h2>
             <div class="version-tag">v0.1.3</div>
           </div>
-          <h3 class="update-title">Оновлення 0.1.3 вже тут! <span style="color: var(--neon-yellow);">🔧</span></h3>
+          <h3 class="update-title">Оновлення 0.1.4 вже тут! <span style="color: var(--neon-yellow);">🔧</span></h3>
           <ul class="updates-list">
-            <li><span class="feature-icon">✨</span> Додано перегляд акаунтів користувачів</li>
+            <li><span class="feature-icon">✨</span> Повний рефактор коду</li>
             <li><span class="feature-icon">🔗</span> Відкриття профілю через нікнейм</li>
             <li><span class="feature-icon">🔄</span> Автоматичне оновлення сторінок</li>
             <li><span class="feature-icon">🎨</span> Кастомізація профілю та біографії</li>
-            <li><span class="feature-icon">📧</span> Додання публічної пошти</li>
+            <li><span class="feature-icon">📧</span> Оновлений візуал</li>
             <li><span class="feature-icon">🐛</span> Виправлення критичних помилок</li>
           </ul>
           <p class="subtitle_s release-date">📅 Дата релізу: <span class="date-highlight">03.08.2025</span></p>
@@ -93,7 +92,7 @@
             <div class="handwritten-note">NEWS</div>
           </div>
           <h3 class="news-title">Нові функції на горизонті!</h3>
-          <p>Готуємо масштабне оновлення з новими можливостями для творців. Очікуйте систему досягнень, покращену систему репутації та багато іншого!</p>
+          <p>Відтепер сайт open source!  та досутпний на github</p>
           <p class="subtitle_s expected-release">📅 Очікуваний реліз: <span class="coming-soon">Кінець серпня 2025</span></p>
         </div>
       </section>
